--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <img src="avatar-perfil.png" alt="avatar da Fernanda">
+    <p>Eu sou Maria Julia</p>
+    <h1> Sou estudante de Programação</h1>
+    <p>Sou aluna do Colégio Estadual João Marques da Silveira em Quatiguá, pretendo me formar em Ciências Biológicas.
+        Gosto muito das aulas de Programação com o Professor Guilherme.
+    </p>
 </body>
 </html>
