--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="container">
     <img src="avatar-perfil.png" alt="avatar da Fernanda">
     <p>Eu sou Maria Julia</p>
     <h1> Sou estudante de Programação</h1>
     <p>Sou aluna do Colégio Estadual João Marques da Silveira em Quatiguá, pretendo me formar em Ciências Biológicas.
         Gosto muito das aulas de Programação com o Professor Guilherme.
+        Veja os projetos que já desenvolvi!
     </p>
+
+<p>Minhas habilidades</p>
+<div>
+    <p>HTML</p>
+    <P>CSS</P>
+    <P>JavaScript</P>
+    <p>Scrath</p>
+</div>
+</header>
 </body>
 </html>
