--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="container">
-    <img src="avatar-perfil.png" alt="avatar da Fernanda">
-    <p>Eu sou Maria Julia</p>
+    <header class="container text-center">
+    <img src="avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150">
+    <p class="lead">Eu sou Maria Julia</p>
     <h1> Sou estudante de Programação</h1>
     <p>Sou aluna do Colégio Estadual João Marques da Silveira em Quatiguá, pretendo me formar em Ciências Biológicas.
         Gosto muito das aulas de Programação com o Professor Guilherme.
